--- a/index.html
+++ b/index.html
@@ -5,8 +5,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>G3 Architect</title>
     <link rel="stylesheet" href="architect.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans&display=swap" rel="stylesheet">   
 </head>
 <body>
-    
+    <!-- Header Portion -->
+    <header>
+        <nav class="nav-container">
+            <div class="nav-title"><h3>G3 Architects</h3></div>
+            <div class="nav-items">
+                <ul>
+                    <li><a href="">Home</a></li>
+                    <li><a href="">About</a></li>
+                    <li><a href="">Contact Us</a></li>
+                    <li><a href="">Login</a></li>
+                </ul>
+            </div>
+        </nav>
+        <div class="banner">
+            <div class="banner-info">
+                <h3 class="banner-title">Brand New 
+                    Group of Architects</h3>
+                <p class="banner-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+            </div>
+                <div class="banner-content">
+                    <button class="btn-primary">Explore More</button>
+                <img src="images/banner.png" alt="">
+                </div>
+        </div>
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
