--- a/index.html
+++ b/index.html
@@ -35,11 +35,101 @@
                 </div>
         </div>
     </header>
+    <!-- main part portion 1 -->
     <main>
+        <!-- teams section -->
+        <section class="teams-container">
+            <div class="image-grid">
+                <img src="images/team1.png" alt="">
+                <img src="images/team2.png" alt="">
+                <img src="images/team3.png" alt="">
+                <img src="images/team4.png" alt="">
+            </div>
+            <div class="team-content">
+                <h3 class="teams-title"><span class="quick-list">Quick list</span> <span class="of-our">of Our</span> <span class="features">Features</span></h3>
+                <p class="teams-description">
+                    There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even
+                </p>
+                <button class="btn-primary">Explore More</button>
+            </div>
+        </section>
+        <!-- features section -->
+        <section class="features-container">
+            <div class="features-text-container">
+                <h3 class="features-title">Features you will love & enjoy</h3>
+                <p class="features-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <div class="features-card-container">
+                    <div class="features-card">
+                    <h3 class="features-card-title">Desktop & Mobile Version</h3>
+                    <p class="features-card-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                    </div>
+                    <div class="features-card">
+                    <h3 class="features-card-title">Drag & Drop Builder</h3>
+                    <p class="features-card-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                    </div>
+                    <div class="features-card">
+                    <h3 class="features-card-title">Awesome Modern Design</h3>
+                    <p class="features-card-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                    </div>
+                    <div class="features-card">
+                    <h3 class="features-card-title">Super Easy to Edit</h3>
+                    <p class="features-card-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                    </div>
+                </div>
+            </div>
+    <div class="features-img">
+            <img src="images/architect.png" alt="">
+        <div class="ten-years-badge">
+            <h3 class="years">10+ Years</h3>
+            <p class="exp">Experience</p>
+        </div>
+    </div>
+        </section>
+        <!-- facts section -->
+        <section class="facts-container">
+            <h3 class="facts-title">Some Facts</h3>
+            <p class="facts-description">
+                There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.
+            </p>
+            <div class="facts-card-container">
+                <div class="card">
+                    <img src="images/icons/ribon.png" alt="">
+                    <h2 class="card-stats">54</h2>
+                    <p class="card-title">Award Winnings</p>
+                </div>
+                <div class="card">
+                    <img src="images/icons/projects.png" alt="">
+                    <h2 class="card-stats">1458</h2>
+                    <p class="card-title">Project Finished</p>
+                </div>
+                <div class="card">
+                    <img src="images/icons/customers.png" alt="">
+                    <h2 class="card-stats">590</h2>
+                    <p class="card-title">Clients Worked</p>
+                </div>
+                <div class="card">
+                    <img src="images/icons/email.png" alt="">
+                    <h2 class="card-stats">22578</h2>
+                    <p class="card-title">Email Send</p>
+                </div>
+            </div>
+        </section>
+        <!-- sponsors section -->
+        <section class="sponsors-container">
+            <h3 class="facts-title">Our Sponsors</h3>
+            <p class="facts-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+            <div class="sponsors-img">
+                <img src="images/sponsors/spotify.png" alt="">
+                <img src="images/sponsors/amazon.png" alt="">
+                <img src="images/sponsors/google.png" alt="">
+                <img src="images/sponsors/telerama.png" alt="">
+                <img src="images/sponsors/figma.png" alt="">
 
+            </div>
+        </section>
     </main>
     <footer>
-
+        <h4 class="footer">All rights reserved copyright@2023 startup landing page design</h4>
     </footer>
 </body>
 </html>
